Refine pipeline section layout and visuals

--- a/index.html
+++ b/index.html
@@ -345,12 +345,12 @@
       </section>
       <section id="pipeline" class="pipeline" aria-labelledby="pipeline-heading">
         <div class="container">
-          <header class="pipeline__header">
-            <h2 id="pipeline-heading">How your pipeline will look with Belkins</h2>
-            <p class="pipeline__sub">Focus on scaling your business while we deliver you sales-ready B2B leads.</p>
-          </header>
-
           <div class="pipeline__card" role="group" aria-label="Pipeline overview">
+            <header class="pipeline__header">
+              <h2 id="pipeline-heading">How your pipeline will look with Belkins</h2>
+              <p class="pipeline__sub">Focus on scaling your business while we deliver you sales-ready B2B leads.</p>
+            </header>
+
             <div class="pipeline__grid">
               <aside class="pipeline__rail" aria-label="Pipeline steps">
                 <div class="pipeline__group">
@@ -464,18 +464,19 @@
                 </div>
               </aside>
 
-              <div class="pipeline__funnel">
-                <p class="pipeline__caption">* Average yearly outcomes. The results depend on multiple factors.</p>
+            <div class="pipeline__funnel">
+              <p class="pipeline__caption">* Average yearly outcomes. The results depend on multiple factors.</p>
 
-                <div class="funnel" role="group" aria-label="Funnel outcomes">
-                  <button
-                    type="button"
-                    class="funnel__layer"
-                    data-step="0"
-                    data-step-key="omnichannel-engagement"
-                    aria-pressed="false"
-                    aria-label="Leads — Up to 18,000* prospects within your client profile"
-                  >
+              <div class="funnel" role="group" aria-label="Funnel outcomes">
+                <button
+                  type="button"
+                  class="funnel__layer"
+                  data-step="0"
+                  data-step-key="omnichannel-engagement"
+                  style="max-width: 460px"
+                  aria-pressed="false"
+                  aria-label="Leads — Up to 18,000* prospects within your client profile"
+                >
                     <span class="funnel__arrow" aria-hidden="true">
                       <svg viewBox="0 0 136 46" role="presentation" focusable="false">
                         <path d="M70.6621 44.8168C69.006 45.7277 66.994 45.7277 65.3379 44.8168L3.33906 10.7157C-1.612 7.99248 0.323319 0.500011 6.00113 0.500011L129.999 0.5C135.677 0.499999 137.612 7.99247 132.661 10.7157L70.6621 44.8168Z"></path>
@@ -491,14 +492,15 @@
                     </span>
                   </button>
 
-                  <button
-                    type="button"
-                    class="funnel__layer funnel__layer--active"
-                    data-step="1"
-                    data-step-key="activation"
-                    aria-pressed="true"
-                    aria-label="MQLs — Up to 9,000* marketing-qualified leads"
-                  >
+                <button
+                  type="button"
+                  class="funnel__layer funnel__layer--active"
+                  data-step="1"
+                  data-step-key="activation"
+                  style="max-width: 408px"
+                  aria-pressed="true"
+                  aria-label="MQLs — Up to 9,000* marketing-qualified leads"
+                >
                     <span class="funnel__arrow" aria-hidden="true">
                       <svg viewBox="0 0 136 46" role="presentation" focusable="false">
                         <path d="M70.6621 44.8168C69.006 45.7277 66.994 45.7277 65.3379 44.8168L3.33906 10.7157C-1.612 7.99248 0.323319 0.500011 6.00113 0.500011L129.999 0.5C135.677 0.499999 137.612 7.99247 132.661 10.7157L70.6621 44.8168Z"></path>
@@ -514,14 +516,15 @@
                     </span>
                   </button>
 
-                  <button
-                    type="button"
-                    class="funnel__layer"
-                    data-step="2"
-                    data-step-key="conversion"
-                    aria-pressed="false"
-                    aria-label="SQLs — 200* sales-qualified meetings with decision-makers"
-                  >
+                <button
+                  type="button"
+                  class="funnel__layer"
+                  data-step="2"
+                  data-step-key="conversion"
+                  style="max-width: 356px"
+                  aria-pressed="false"
+                  aria-label="SQLs — 200* sales-qualified meetings with decision-makers"
+                >
                     <span class="funnel__arrow" aria-hidden="true">
                       <svg viewBox="0 0 136 46" role="presentation" focusable="false">
                         <path d="M70.6621 44.8168C69.006 45.7277 66.994 45.7277 65.3379 44.8168L3.33906 10.7157C-1.612 7.99248 0.323319 0.500011 6.00113 0.500011L129.999 0.5C135.677 0.499999 137.612 7.99247 132.661 10.7157L70.6621 44.8168Z"></path>
@@ -537,14 +540,15 @@
                     </span>
                   </button>
 
-                  <button
-                    type="button"
-                    class="funnel__layer"
-                    data-step="3"
-                    data-step-key="deal-closure"
-                    aria-pressed="false"
-                    aria-label="Opportunities — 10–30* closed deals"
-                  >
+                <button
+                  type="button"
+                  class="funnel__layer"
+                  data-step="3"
+                  data-step-key="deal-closure"
+                  style="max-width: 300px"
+                  aria-pressed="false"
+                  aria-label="Opportunities — 10–30* closed deals"
+                >
                     <span class="funnel__arrow" aria-hidden="true">
                       <svg viewBox="0 0 136 46" role="presentation" focusable="false">
                         <path d="M70.6621 44.8168C69.006 45.7277 66.994 45.7277 65.3379 44.8168L3.33906 10.7157C-1.612 7.99248 0.323319 0.500011 6.00113 0.500011L129.999 0.5C135.677 0.499999 137.612 7.99247 132.661 10.7157L70.6621 44.8168Z"></path>
