feat(sets-apart): responsive section with CTA, 5 cards, and images mapped to each card

--- a/index.html
+++ b/index.html
@@ -568,6 +568,110 @@
           </div>
         </div>
       </section>
+      <section id="sets-apart" class="sets-apart" aria-labelledby="sets-apart-heading">
+        <div class="container">
+          <div class="sets-apart__inner">
+            <div class="sets-apart__header">
+              <div class="sets-apart__intro">
+                <h2 id="sets-apart-heading">What sets us apart</h2>
+                <p>
+                  Since 2017, Belkins has been the top outbound lead generation agency for B2B companies across 50+ industries.
+                  Here’s why:
+                </p>
+              </div>
+              <a class="btn btn-primary sets-apart__cta" href="#">Get a quote</a>
+            </div>
+            <div class="sets-apart__grid" role="list">
+              <article class="sets-apart__card" tabindex="0" role="listitem">
+                <img
+                  src="https://res.cloudinary.com/diptffkzh/image/upload/v1760183048/tailored-omnichannel-strategies.DnUZGnlx_cbbrim.webp"
+                  alt="Tailored omnichannel strategies"
+                  width="480"
+                  height="300"
+                  loading="lazy"
+                  decoding="async"
+                />
+                <div class="sets-apart__card-body">
+                  <h3>Tailored omnichannel strategies</h3>
+                  <p>
+                    Unlike other agencies’ cookie-cutter approaches, we craft personalized go-to-market plans that align perfectly
+                    with your unique business objectives and integrate both outbound and inbound efforts.
+                  </p>
+                </div>
+              </article>
+              <article class="sets-apart__card" tabindex="0" role="listitem">
+                <img
+                  src="https://res.cloudinary.com/diptffkzh/image/upload/v1760183048/world-class-talent.Bj5AP60s_q1qsny.webp"
+                  alt="World-class talent"
+                  width="480"
+                  height="300"
+                  loading="lazy"
+                  decoding="async"
+                />
+                <div class="sets-apart__card-body">
+                  <h3>World-class talent</h3>
+                  <p>
+                    We carefully select teams to work on your project and to act as an extension of your own. Rest assured, you’ll
+                    get dedicated specialists with narrow industry knowledge, relevant certifications, and dozens of successful
+                    cases.
+                  </p>
+                </div>
+              </article>
+              <article class="sets-apart__card" tabindex="0" role="listitem">
+                <img
+                  src="https://res.cloudinary.com/diptffkzh/image/upload/v1760183047/first-results-within-month.CZkWujlE_gdymaa.webp"
+                  alt="The first results within a month"
+                  width="480"
+                  height="300"
+                  loading="lazy"
+                  decoding="async"
+                />
+                <div class="sets-apart__card-body">
+                  <h3>The first results within a month</h3>
+                  <p>
+                    We set up and launch your campaign in the first 14 days. Within the next 30 days, you’ll start seeing the first
+                    appointments in your calendar.
+                  </p>
+                </div>
+              </article>
+              <article class="sets-apart__card" tabindex="0" role="listitem">
+                <img
+                  src="https://res.cloudinary.com/diptffkzh/image/upload/v1760183047/b2b-focused-expertise.WCKyBRCN_i3oqmb.webp"
+                  alt="B2B-focused expertise"
+                  width="480"
+                  height="300"
+                  loading="lazy"
+                  decoding="async"
+                />
+                <div class="sets-apart__card-body">
+                  <h3>B2B-focused expertise</h3>
+                  <p>
+                    Our deep understanding of the B2B landscape empowers us to use the right cutting-edge tools and deliver
+                    targeted, result-oriented outbound solutions that last even if we part ways.
+                  </p>
+                </div>
+              </article>
+              <article class="sets-apart__card" tabindex="0" role="listitem">
+                <img
+                  src="https://res.cloudinary.com/diptffkzh/image/upload/v1760183047/cross-functional-approach.D0BzI-D5_ndwueh.webp"
+                  alt="Cross-functional approach"
+                  width="480"
+                  height="300"
+                  loading="lazy"
+                  decoding="async"
+                />
+                <div class="sets-apart__card-body">
+                  <h3>Cross-functional approach</h3>
+                  <p>
+                    Our end-to-end strategy and implementation support cover every stage of the deal generation process, from
+                    inbound lead gen to strategy consulting, minimizing risks and raising sales by 25% on average.
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="scripts.js"></script>
   </body>
