Refine pipeline funnel layout

--- a/index.html
+++ b/index.html
@@ -477,20 +477,20 @@
                   aria-pressed="false"
                   aria-label="Leads — Up to 18,000* prospects within your client profile"
                 >
-                    <span class="funnel__arrow" aria-hidden="true">
-                      <svg viewBox="0 0 136 46" role="presentation" focusable="false">
-                        <path d="M70.6621 44.8168C69.006 45.7277 66.994 45.7277 65.3379 44.8168L3.33906 10.7157C-1.612 7.99248 0.323319 0.500011 6.00113 0.500011L129.999 0.5C135.677 0.499999 137.612 7.99247 132.661 10.7157L70.6621 44.8168Z"></path>
-                      </svg>
-                      <span>Leads</span>
-                    </span>
-                    <svg class="funnel__svg" viewBox="0 0 460 120" aria-hidden="true" focusable="false">
-                      <path d="M20 0h420l-36 120H56L20 0Z"></path>
+                  <span class="funnel__badge" data-step="0" aria-hidden="true">
+                    <svg viewBox="0 0 136 46" role="presentation" focusable="false">
+                      <path d="M70.6621 44.8168C69.006 45.7277 66.994 45.7277 65.3379 44.8168L3.33906 10.7157C-1.612 7.99248 0.323319 0.500011 6.00113 0.500011L129.999 0.5C135.677 0.499999 137.612 7.99247 132.661 10.7157L70.6621 44.8168Z"></path>
                     </svg>
-                    <span class="funnel__text">
-                      <span class="funnel__stat">Up to 18,000* prospects</span>
-                      <span class="funnel__support">within your client profile</span>
-                    </span>
-                  </button>
+                    <span>Leads</span>
+                  </span>
+                  <svg class="funnel__svg" viewBox="0 0 460 120" aria-hidden="true" focusable="false">
+                    <path d="M32 0H428Q440 0 440 12L404 108Q400 120 388 120H72Q60 120 56 108L20 12Q20 0 32 0Z"></path>
+                  </svg>
+                  <span class="funnel__text">
+                    <span class="funnel__stat">Up to 18,000* prospects</span>
+                    <span class="funnel__support">within your client profile</span>
+                  </span>
+                </button>
 
                 <button
                   type="button"
@@ -501,20 +501,20 @@
                   aria-pressed="true"
                   aria-label="MQLs — Up to 9,000* marketing-qualified leads"
                 >
-                    <span class="funnel__arrow" aria-hidden="true">
-                      <svg viewBox="0 0 136 46" role="presentation" focusable="false">
-                        <path d="M70.6621 44.8168C69.006 45.7277 66.994 45.7277 65.3379 44.8168L3.33906 10.7157C-1.612 7.99248 0.323319 0.500011 6.00113 0.500011L129.999 0.5C135.677 0.499999 137.612 7.99247 132.661 10.7157L70.6621 44.8168Z"></path>
-                      </svg>
-                      <span>MQLs</span>
-                    </span>
-                    <svg class="funnel__svg" viewBox="0 0 402 116" aria-hidden="true" focusable="false">
-                      <path d="M18 0h366l-32 116H50L18 0Z"></path>
+                  <span class="funnel__badge" data-step="1" aria-hidden="true">
+                    <svg viewBox="0 0 136 46" role="presentation" focusable="false">
+                      <path d="M70.6621 44.8168C69.006 45.7277 66.994 45.7277 65.3379 44.8168L3.33906 10.7157C-1.612 7.99248 0.323319 0.500011 6.00113 0.500011L129.999 0.5C135.677 0.499999 137.612 7.99247 132.661 10.7157L70.6621 44.8168Z"></path>
                     </svg>
-                    <span class="funnel__text">
-                      <span class="funnel__stat">Up to 9,000*</span>
-                      <span class="funnel__support">marketing-qualified leads</span>
-                    </span>
-                  </button>
+                    <span>MQLs</span>
+                  </span>
+                  <svg class="funnel__svg" viewBox="0 0 402 116" aria-hidden="true" focusable="false">
+                    <path d="M30 0H372Q384 0 384 12L352 104Q348 116 336 116H66Q54 116 50 104L18 12Q18 0 30 0Z"></path>
+                  </svg>
+                  <span class="funnel__text">
+                    <span class="funnel__stat">Up to 9,000*</span>
+                    <span class="funnel__support">marketing-qualified leads</span>
+                  </span>
+                </button>
 
                 <button
                   type="button"
@@ -525,20 +525,20 @@
                   aria-pressed="false"
                   aria-label="SQLs — 200* sales-qualified meetings with decision-makers"
                 >
-                    <span class="funnel__arrow" aria-hidden="true">
-                      <svg viewBox="0 0 136 46" role="presentation" focusable="false">
-                        <path d="M70.6621 44.8168C69.006 45.7277 66.994 45.7277 65.3379 44.8168L3.33906 10.7157C-1.612 7.99248 0.323319 0.500011 6.00113 0.500011L129.999 0.5C135.677 0.499999 137.612 7.99247 132.661 10.7157L70.6621 44.8168Z"></path>
-                      </svg>
-                      <span>SQLs</span>
-                    </span>
-                    <svg class="funnel__svg" viewBox="0 0 342 112" aria-hidden="true" focusable="false">
-                      <path d="M16 0h310l-28 112H44L16 0Z"></path>
+                  <span class="funnel__badge" data-step="2" aria-hidden="true">
+                    <svg viewBox="0 0 136 46" role="presentation" focusable="false">
+                      <path d="M70.6621 44.8168C69.006 45.7277 66.994 45.7277 65.3379 44.8168L3.33906 10.7157C-1.612 7.99248 0.323319 0.500011 6.00113 0.500011L129.999 0.5C135.677 0.499999 137.612 7.99247 132.661 10.7157L70.6621 44.8168Z"></path>
                     </svg>
-                    <span class="funnel__text">
-                      <span class="funnel__stat">200* sales-qualified meetings</span>
-                      <span class="funnel__support">with decision-makers</span>
-                    </span>
-                  </button>
+                    <span>SQLs</span>
+                  </span>
+                  <svg class="funnel__svg" viewBox="0 0 342 112" aria-hidden="true" focusable="false">
+                    <path d="M28 0H314Q326 0 326 12L298 100Q294 112 282 112H60Q48 112 44 100L16 12Q16 0 28 0Z"></path>
+                  </svg>
+                  <span class="funnel__text">
+                    <span class="funnel__stat">200* sales-qualified meetings</span>
+                    <span class="funnel__support">with decision-makers</span>
+                  </span>
+                </button>
 
                 <button
                   type="button"
@@ -549,19 +549,19 @@
                   aria-pressed="false"
                   aria-label="Opportunities — 10–30* closed deals"
                 >
-                    <span class="funnel__arrow" aria-hidden="true">
-                      <svg viewBox="0 0 136 46" role="presentation" focusable="false">
-                        <path d="M70.6621 44.8168C69.006 45.7277 66.994 45.7277 65.3379 44.8168L3.33906 10.7157C-1.612 7.99248 0.323319 0.500011 6.00113 0.500011L129.999 0.5C135.677 0.499999 137.612 7.99247 132.661 10.7157L70.6621 44.8168Z"></path>
-                      </svg>
-                      <span>Opportunities</span>
-                    </span>
-                    <svg class="funnel__svg" viewBox="0 0 282 96" aria-hidden="true" focusable="false">
-                      <path d="M14 0h254l-26 96H40L14 0Z"></path>
+                  <span class="funnel__badge" data-step="3" aria-hidden="true">
+                    <svg viewBox="0 0 136 46" role="presentation" focusable="false">
+                      <path d="M70.6621 44.8168C69.006 45.7277 66.994 45.7277 65.3379 44.8168L3.33906 10.7157C-1.612 7.99248 0.323319 0.500011 6.00113 0.500011L129.999 0.5C135.677 0.499999 137.612 7.99247 132.661 10.7157L70.6621 44.8168Z"></path>
                     </svg>
-                    <span class="funnel__text">
-                      <span class="funnel__stat">10–30* closed deals</span>
-                    </span>
-                  </button>
+                    <span>Opportunities</span>
+                  </span>
+                  <svg class="funnel__svg" viewBox="0 0 282 96" aria-hidden="true" focusable="false">
+                    <path d="M26 0H256Q268 0 268 12L242 84Q238 96 226 96H54Q42 96 40 84L14 12Q14 0 26 0Z"></path>
+                  </svg>
+                  <span class="funnel__text">
+                    <span class="funnel__stat">10–30* closed deals</span>
+                  </span>
+                </button>
                 </div>
               </div>
             </div>
