--- a/index.html
+++ b/index.html
@@ -572,15 +572,17 @@
       <section id="sets-apart" class="sets-apart" aria-labelledby="sets-apart-heading">
         <div class="container">
           <header class="sets-apart__header">
-            <h2 id="sets-apart-heading">What sets us apart</h2>
-            <p class="sets-apart__intro">
-              Since 2017, Belkins has been the top outbound lead generation agency for B2B companies across 50+ industries.
-              Here’s why:
-            </p>
+            <div class="sets-apart__heading">
+              <h2 id="sets-apart-heading">What sets us apart</h2>
+              <p class="sets-apart__intro">
+                Since 2017, Belkins has been the top outbound lead generation agency for B2B companies across 50+ industries.
+                Here’s why:
+              </p>
+            </div>
             <a class="btn btn-primary sets-apart__cta" href="#">Get a quote</a>
           </header>
           <div class="sets-apart__grid">
-            <article class="sets-apart__card" tabindex="0">
+            <article class="sets-apart__card" aria-labelledby="sets-apart-title-1">
               <img
                 src="https://res.cloudinary.com/diptffkzh/image/upload/v1760183048/tailored-omnichannel-strategies.DnUZGnlx_cbbrim.webp"
                 alt="Tailored omnichannel strategies"
@@ -590,14 +592,14 @@
                 height="360"
               />
               <div class="sets-apart__content">
-                <h3>Tailored omnichannel strategies</h3>
+                <h3 id="sets-apart-title-1">Tailored omnichannel strategies</h3>
                 <p>
                   Unlike other agencies’ cookie-cutter approaches, we craft personalized go-to-market plans that align perfectly
                   with your unique business objectives and integrate both outbound and inbound efforts.
                 </p>
               </div>
             </article>
-            <article class="sets-apart__card" tabindex="0">
+            <article class="sets-apart__card" aria-labelledby="sets-apart-title-2">
               <img
                 src="https://res.cloudinary.com/diptffkzh/image/upload/v1760183048/world-class-talent.Bj5AP60s_q1qsny.webp"
                 alt="World-class talent"
@@ -607,14 +609,14 @@
                 height="360"
               />
               <div class="sets-apart__content">
-                <h3>World-class talent</h3>
+                <h3 id="sets-apart-title-2">World-class talent</h3>
                 <p>
                   We carefully select teams to work on your project and to act as an extension of your own. Rest assured, you’ll
                   get dedicated specialists with narrow industry knowledge, relevant certifications, and dozens of successful cases.
                 </p>
               </div>
             </article>
-            <article class="sets-apart__card" tabindex="0">
+            <article class="sets-apart__card" aria-labelledby="sets-apart-title-3">
               <img
                 src="https://res.cloudinary.com/diptffkzh/image/upload/v1760183047/first-results-within-month.CZkWujlE_gdymaa.webp"
                 alt="The first results within a month"
@@ -624,14 +626,14 @@
                 height="360"
               />
               <div class="sets-apart__content">
-                <h3>The first results within a month</h3>
+                <h3 id="sets-apart-title-3">The first results within a month</h3>
                 <p>
                   We set up and launch your campaign in the first 14 days. Within the next 30 days, you’ll start seeing the first
                   appointments in your calendar.
                 </p>
               </div>
             </article>
-            <article class="sets-apart__card" tabindex="0">
+            <article class="sets-apart__card" aria-labelledby="sets-apart-title-4">
               <img
                 src="https://res.cloudinary.com/diptffkzh/image/upload/v1760183047/b2b-focused-expertise.WCKyBRCN_i3oqmb.webp"
                 alt="B2B-focused expertise"
@@ -641,14 +643,14 @@
                 height="360"
               />
               <div class="sets-apart__content">
-                <h3>B2B-focused expertise</h3>
+                <h3 id="sets-apart-title-4">B2B-focused expertise</h3>
                 <p>
                   Our deep understanding of the B2B landscape empowers us to use the right cutting-edge tools and deliver targeted,
                   result-oriented outbound solutions that last even if we part ways.
                 </p>
               </div>
             </article>
-            <article class="sets-apart__card" tabindex="0">
+            <article class="sets-apart__card" aria-labelledby="sets-apart-title-5">
               <img
                 src="https://res.cloudinary.com/diptffkzh/image/upload/v1760183047/cross-functional-approach.D0BzI-D5_ndwueh.webp"
                 alt="Cross-functional approach"
@@ -658,7 +660,7 @@
                 height="360"
               />
               <div class="sets-apart__content">
-                <h3>Cross-functional approach</h3>
+                <h3 id="sets-apart-title-5">Cross-functional approach</h3>
                 <p>
                   Our end-to-end strategy and implementation support cover every stage of the deal generation process, from inbound
                   lead gen to strategy consulting, minimizing risks and raising sales by 25% on average.
